# valdazpack

./: README.rst  pyproject.toml
src/valdazpack/: __main__.py
src/valdazpack/data/daz/: audiences.txt  common_content_directories.txt  deprecated_categories.txt  deprecated_content_types.txt  dson_external_file_references.txt  expected_runtime_directories.txt  gratuitous_content_files.txt  import_file_extensions.txt  native_file_extensions.txt  reserved_package_prefixes.txt  special_categories.txt  user_facing_excluded_directories.txt
src/valdazpack/data/poser/: expected_libraries_directories.txt  expected_runtime_directories.txt  poser_file_extensions.txt
src/valdazpack/data/schemas/: Manifest.xsd  Metadata.xsd  Supplement.xsd  djl.schema.json  dson.schema.json
src/valdazpack/data/templates/: report.css  report.js  (+2 more)
src/valdazpack/issues/: __init__.py  contentdirectory.py  data.py  dsonfiles.py  geometries.py  libraries.py  manifest.py  metadatafile.py  package.py  runtime.py  supplementfile.py  support.py  zipfile.py
src/valdazpack/rules/: contentdirectory.py  datadirectory.py  dsonfiles.py  metadatafiles.py  package.py  packagemanifest.py  packagesupplementfile.py  runtimedirectory.py  runtimegeometriesdirectory.py  runtimelibrariesdirectory.py  runtimesupportdirectory.py  zipfile.py
src/valdazpack/validator/: __init__.py  issues.py  package.py  resources.py  ruleset.py  schema.py  utilities.py  validate.py  validationdata.py
tests/: conftest.py  test_issues_content.py  test_issues_data.py  test_issues_dson.py  test_issues_geometries.py  test_issues_libraries.py  test_issues_metadata.py  test_issues_package.py  test_issues_package_manifest.py  test_issues_package_supplement.py  test_issues_runtime.py  test_issues_support.py  test_issues_zipfile.py  test_validator_package_utilities.py  test_validator_schema.py  test_validator_utilities.py
tests/data/: list.txt
tests/data/invalid/: Manifest.dsx  Supplement.dsx
tests/data/invalid-dsx/: Manifest.dsx  Supplement.dsx
tests/data/valid/: Manifest.dsx  Supplement.dsx
typings/jsonpath_ng/: __init__.pyi
typings/jsonpath_ng/ext/: __init__.pyi
(+10 files in other folders)
