[tool.poetry]
name = "valdazpack"
version = "0.1.1"
description = "DAZ Package Validator"
license = "MIT"
authors = ["Omni Flux <omniflux@omniflux.com>"]
readme = "README.rst"
repository = "https://github.com/Omniflux/valdazpack"
classifiers = [
	"Development Status :: 3 - Alpha",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Utilities"
]

[tool.poetry.dependencies]
python = ">=3.11"
Pillow = "^10.2.0"
lxml = "^4.9.4"
jinja2 = "^3.1.3"
jsonpath-ng = "^1.6.1"
jsonschema = {extras = ["format"], version = "^4.21.1"}
"fs.dimzipfs" = "^0.1.1"
"fs.wrapcifs" = "^0.1.0"

[tool.poetry.group.dev.dependencies]
types-lxml = "^2023.10.21"
types-jsonschema = "^4.21.0.20240118"
types-pillow = "^10.2.0.2024020"

[tool.poetry.group.test.dependencies]
pytest = "^8.0.0"
pytest-mock = "^3.12.0"

[tool.poetry.scripts]
valdazpack = {reference = "valdazpack.__main__:_main", type = "console"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"