[tool.poetry]
name = "valdazpack"
version = "0.1.1"
description = "DAZ Package Validator"
license = "MIT"
authors = ["Omni Flux <omniflux@omniflux.com>"]
readme = "README.rst"
repository = "https://github.com/Omniflux/valdazpack"
classifiers = [
	"Development Status :: 3 - Alpha",
	"Operating System :: OS Independent",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Utilities"
]

[tool.poetry.dependencies]
python = ">=3.11"
Pillow = "^12.1.0"
lxml = "^4.9.4"
jinja2 = "^3.1.6"
jsonpath-ng = "^1.7.0"
jsonschema = {extras = ["format"], version = "^4.25.1"}
"fs.dimzipfs" = "^0.1.1"
"fs.wrapcifs" = "^0.1.0"

[tool.poetry.group.dev.dependencies]
types-lxml = "^2025.03.30"
types-jsonschema = "^4.21.0.20240118"

[tool.poetry.group.test.dependencies]
pytest = "^9.0.2"
pytest-mock = "^3.15.1"

[tool.poetry.scripts]
valdazpack = {reference = "valdazpack.__main__:_main", type = "console"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
